crates/hwp-core/tests/snapshots/snapshot_tests__table_bug_hwpx_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**버전**: 10, 0, 0, 5060 WIN32LEWindows_8



**[붙임 1]**

2026학년도 자율(전공)동아리 개설 신청서

| 동아리명 |  | 지도교사 | **(서명)** |
| --- | --- | --- | --- |
| 현 동아리장 | 학번:           이름: (휴대전화 : 010-        -         ) | 구분 | □ 25년 활동 □ 26년 신규 |
| 차기 동아리장 | 학번:           이름: (휴대전화 : 010-        -         ) |  |  |
| 동아리원 | (학번:0000) 홍길동 | (         ) | (         ) |
| (         ) | (         ) | (         ) |
| (         ) | (         ) | (         ) |
| (         ) | (         ) | (         ) |
| (         ) | (         ) | (         ) |
| 활동목표 | 1.(2026년) 2.(2027년) |
|  | 동아리 활동 내용 | 비고 |
| 4월 |  |  |
| 5월 |  |  |
| 6월 |  |  |
| 7월 |  |  |
| 8월 |  |  |
| 9월 |  |  |
| 10월 |  |  |
| 11월 |  |  |
| 12월 |  |  |
| 1-2월 |  |  |

---

**[붙임 2]**

2026학년도 자율(전공)동아리 보고서

| 동아리명 |  | 지도교사 |  |
| --- | --- | --- | --- |
| 동아리장 |  | 동아리실 |  |
| 동아리 활동시간 | 매주 화요일(8-10교시), 금요일(6-10교시) |
| 목표 | 1. 2. |
| 동아리 활동내용(**멘토링 활동내용 필수**) |
| 4월 |
| 5월 |
| 6월 |
| 7월 |

| 8월 |
| --- |
| 9월 |
| 10월 |
| 11월 |
| 12월 |

지도교사:(서명)

---

**[붙임 3]**

**2026학년도**

**자율(전공) 동아리 프로젝트 보고서**

주제

| **명단** | 1111홍길동, 2112김철수, ...(학번 오름차순으로 작성) |
| --- | --- |
| **담당교사 확인** |  |

**대덕소프트웨어마이스터고등학교**

---

**※ 보고서 작성 요령**

| Ⅰ. 프로젝트 실행 동기 및 목적 1. 가. 1) 가) Ⅱ. 이론적 배경(기존 사례 또는 문헌 연구 결과) Ⅲ. 프로젝트 방법 및 과정 Ⅳ. 프로젝트 결과 Ⅴ. 결론 및 고찰 ▣ 참고문헌 ※ 위 작성 요령에 준하여 작성, A4 10매 내외 작성 |
| --- |

---

**[붙임 4]**

**2026학년도 전공(심화)동아리 지도 일지**

| 동아리명 |  |
| --- | --- |
| 동아리원 (총원:    명) | 1111홍길동, 2112김철수, ...(학번 오름차순으로 작성) |
| 일 정 | 지도 활동 및 내용 | 시간 | 서명 |
| 월    일 (   ) |  |  |  |
| 지도인원:    명 | 결시자:1111홍길동, 2112김철수 |
| 월    일 (   ) |  |  |  |
| 지도인원:    명 | 결시자: |
| 월    일 (   ) |  |  |  |
| 지도인원:    명 | 결시자: |
| 월    일 (   ) |  |  |  |
| 지도인원:    명 | 결시자: |
| 월    일 (   ) |  |  |  |
| 지도인원:    명 | 결시자: |

**지도 교사  :               (인)**

---

**[붙임 5]**

**SW전문가 멘토 지원서**

| 접수 번호 | 2026- |  |
| --- | --- | --- |
| 신 청 자 | 성 명 | 한 글 |  | 성     별 | 남   ,   여 |
| 한 자 |  | 생년월일 |  |
| 현 주 소 | □□□□□ 연락처 :  (집)                      (핸드폰) |
| 최종 학력 | 출신학교 |  |
| 졸업년도 |  |

본인은멘토링 운영 결격사유(성격, 인성, 전과기록, 업무능력, 병력 등)가 발생할 시에 해임 조치하여도 이의가 없으며 2026학년도 SW전문가 멘토링에 소정의 서류를 갖추어 지원합니다.

2026년       월       일

신 청 자                   (서명)

대덕소프트웨어마이스터고등학교장 귀하

󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏

【서류제출】본 서류는 서명 후 스캔 제출

【첨부서류】

1. 이력서 1부(별도 양식 없음)

2. 멘토링 활동 계획서 1부[붙임4]

3. 재직증명서

4. 개인정보 수집・이용・제공 동의서 1부[붙임5]

5. 통장사본 스캔본(인터넷 뱅킹에서 통장사본 출력, 계좌 개설확인서 등)

예) 농협의 경우 [증명서]-[통장사본출력])

6. 성범죄 경력 조회 및 아동학대 관련 범죄전력조회 동의서 1부(스캔본)[붙임7]

7. 거래처 등록을 위한 개인정보 수집・이용・제공 동의서 1부(스캔본)[붙임8]

---

**[붙임 6]**

개인정보 수집 및 활용 동의서

| **개인정보의****수집 및 이용목적** | | **[개인정보 및 고유 식별정보 수집 항목]** | | --- | | 1. 개인정보 : 성명, 주소, 연락처, 이메일, 사진, 학력 및 경력사항, 자격 및수상내역, 담당프로그램, 교육활동 관련 영상정보(사진, 동영상) 2. 고유 식별정보 : 주민등록번호 | | **[개인정보 및 고유 식별정보 이용 목적]** | | 1. 자율(전공)동아리 활동 및 관리에 활용 2. 자율(전공)동아리 운영 및 생활 모습 안내 3. 자율(전공)동아리에 활용 | |
| --- | --- |
| **개인정보** **제 3자 제공동의** | |  | **개인정보를 제공받는 자** | **제공받는 개인정보의 이용범위** | | --- | --- | --- | | 1 | 멘토링 대상자 및 교원 | 담당프로그램, 성명, 연락처 | |
| **개인정보의****보유 및 이용기간** | ■ 개인정보·고유 식별정보의 보유 및 이용 기간 - 1년 |
| **개인정보 제공 동의 거부 권리 및** **그에 따른 제약 사항** | ■ 개인정보 및 고유 식별정보의 제공 동의를 거부할 권리가 있으며, 동의하지 않는다면 정보를 제공하지 않습니다. ■개인정보 및 고유 식별정보 미제공 시 자율(전공)동아리 안내 및 관련 내용을원활하게받지 못할 수 있습니다. |
| | 1. 개인정보 수집․이용 동의 | □ 예          □ 아니요 | | --- | --- | | 2. 개인정보 제 3자 제공 및 활용 동의 | □ 예          □ 아니요 | | --- | --- | 이하 본인은 개인정보보호법 및 관련 법규에 의거하여 대덕소프트웨어마이스터고등학교자율(전공)동아리에서 상기 개인정보를수집·이용 및 제공**·**활용하는 것에 대해 동의합니다. **2026년        월       일 　** |
|  | **전공 동아리 멘토                    (서명)** |

---

**[붙임 7]**

**멘토링 활동 계획서(  월)**

| 동아리명 |  | 대표학생 |  |
| --- | --- | --- | --- |
| 동아리원 |  |
| 활동목표 |  |
| 일 정 | 멘토 활동 및 내용 | 시간 | 멘토 |
| 2026년 월    일 (   ) |  |  |  |
| 월    일 (   ) |  |  |  |
|  |  |  |  |
|  |  |  |  |
|  |  |  |  |
|  |  |  |  |
|  |  |  |  |

❍전공동아리 대표학생과 사전에 교육일정을 협의 후 월 단위로 작성합니다.

**확인자  :  교사              (인)**

---

**[붙임 8]**

**2026학년도 자율(전공)동아리 멘토 활동 일지(  월)**

| 동아리명 |  | 멘토 |  | 활동시간 |  |
| --- | --- | --- | --- | --- | --- |
| 멘토링 일시 | 2026년   월    일 (  ) |
| 활동 내용 | [ 교시   :   ~   :  ] | 팀장 확인 |
|  |  |
| [ 교시   :   ~   :  ] | 팀장 확인 |
|  |  |
| [ 교시   :   ~   :  ] | 팀장 확인 |
|  |  |
| [ 교시   :   ~   :  ] | 팀장 확인 |
|  |  |
| [ 교시   :   ~   :  ] | 팀장 확인 |
|  |  |
| [ 교시   :   ~   :  ] | 팀장 확인 |
|  |  |
| [ 교시   :   ~   :  ] | 팀장 확인 |
|  |  |
| [ 교시   :   ~   :  ] | 팀장 확인 |
|  |  |
| 기타 사항 |  |
| ※ 교육이 종료된 후 1일 단위로 작성합니다.(하루 8시간을 멘토링 한 경우 1장으로 작성) **확인자  :  교사         (인)** |
|  |
|  | 마이스터부 |
| 담당(계) | 부장 |
|  |  |  |

---

**[붙임 9]**

| [별지 제12호서식] **성범죄 경력 조회****및 아동학대 관련 범죄전력조회 동의서** |
| --- |
|  |
| 대상자 | 성  명 |  |
| 주민등록번호 (외국인의 경우 생년월일) |  | 외국인등록번호(외국인인의 경우만 기입) |  |
| 연락처 (휴대폰 등) |  |
|  |
| 본인은 대덕소프트웨어마이스터고등학교 (시설)(예: 유치원, 어린이집, 아동복지시설, 청소년쉼터, 청소년활동시설, 의료기관 등) 취업자(취업예정자)로서, 「아동ㆍ청소년의 성보호에 관한 법률」 제56조 및 같은 법 시행령 제25조에 따른 성범죄경력조회,「아동복지법」 제29조의3에따른 아동학대 범죄전력 조회 신청에 동의합니다. |
| 2026년         월         일 |
| 동의자 | (서명 또는 인) |
| 대전유성경찰서장귀하 |
|  |
| 유의사항 |
| 1. 개인정보 수집항목 :*표 항목(성명, 주민등록번호,외국인의 경우 외국인등록번호) 2.대상자가 외국인의 경우 성명(영문), 외국인등록번호를 적습니다. 3.개인정보 제공 거부에 따른 제한사항 :귀하는 개인정보 제공 동의를 거부를 권리가 있으나, 동의 거부 시에는 취업에 제한을 받을 수 있습니다. 4.개인정보의 보유 :수집된 고객의 개인정보는성범죄 경력조회 신청 등을 위하여 사용됩니다. |
| 210㎜×297㎜[백상지 80g/㎡(재활용품)] |

---

**[붙임 10]**

| **거래처 등록을 위한 개인정보 수집・이용・제공 동의서** |
| --- |
| 지급 관련 거래처 신규 등록을 위해 아래와 같이 개인정보를 수집・이용 및 제공 하고자 합니다. 내용을 자세히 읽으신 후 동의 여부를 결정하여 주시기 바랍니다. **□ 개인정보 수집·이용 동의** 1. 수집·이용목적 : 수당, 급여 등 각종 지급을 위한**거래처 관리** 2. 수집 항목 :필수(**이름, 생년월일/주민번호, 예금주명, 계좌번호)**, 선택(주소, 핸드폰, 전화번호) 3. 이용 및 보유기간 :계약 종료일로부터 익년 5년간(단 거래 미발생 시 설정한 기간) 4.동의를 거부할 수 있으며, 거부 시 거래처 등록 및 수당, 급여 등 각종 지급이 불가합니다. 개인정보 수집·이용 동의□ 예           □ 아니오 **□ 개인정보 제3자 제공 동의** 1. 제공받는 기관 : 대전광역시교육청 및 산하기관(학교포함) 2.제공받는 자의 이용 목적 : 수당, 급여 등 각종 지급을 위한**교육청 및 산하기관(학교포함) 거래처 공유** 3. 이용 및 보유 기간 :계약 종료일로부터 익년 5년간(단 거래 미발생 시 설정한 기간) 4. 제공 항목 :**필수(이름, 생년월일, 예금주명, 계좌번호)**, 선택(주소, 핸드폰, 전화번호) 5. 동의를 거부할수 있으며, 거부시 대전광역시교육청 및 산하기관(학교포함)에서 거래처 정보를 이용할 수 없습니다.(해당 기관에서 신규 등록하여 이용 가능함.) 개인정보 제3자 제공 동의□ 예           □ 아니오 **□ 개인정보 제3자 제공 고지** 1. 제공받는 기관 : 국세청 2. 제공받는 자의 이용 목적 :**소득세 징수** 3. 제공 항목 : 이름,**주민등록번호** 4. 제공 근거 : 「소득세법」 제127조 **□ 주민등록번호 수집****·****제공 고지** 「개인정보보호법」 제 24조의2제1항제1호에 따라 정보주체의 동의 없이 주민등록번호를 수집**·**제공할 수 있습니다. | ※ 수집된 개인정보는 동의한 목적 외로는 활용하지 않으며개인정보처리자에게 정정 또는      삭제 등을 요구할 수있습니다. | | --- | **□ 제공되는 개인정보** 이름: 주민등록번호: 계좌번호:        은행 연락처: 2026 년     월     일 성  명                    (서명) **대덕소프트웨어마이스터고등학교**귀하 |
