crates/hwp-core/tests/snapshots/snapshot_tests__table_bug_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 210.00mm x 297.00mm



[붙임 1]

2026학년도 자율(전공)동아리 개설 신청서


| 동아리명<br> |   |   | 지도교사<br> | (서명)<br> |
|---|---|---|---|---|
| 현 동아리장<br> | 학번:           이름:     <br> (휴대전화 : 010-        -         )<br> |   | 구분<br> | □ 25년 활동<br> □ 26년 신규<br> |
| 차기<br> 동아리장<br> | 학번:           이름:     <br> (휴대전화 : 010-        -         )<br> |   |   |   |
| 동아리원<br> | (학번:0000) 홍길동 <br> | (         )<br> | (         )<br> |   |
|   | (         )<br> | (         )<br> | (         )<br> |   |
|   | (         )<br> | (         )<br> | (         )<br> |   |
|   | (         )<br> | (         )<br> | (         )<br> |   |
|   | (         )<br> | (         )<br> | (         )<br> |   |
| 활동목표<br> | 1.(2026년)<br> 2.(2027년)<br> |   |   |   |
|   | 동아리 활동 내용<br> |   |   | 비고<br> |
| 4월<br> |   |   |   |   |
| 5월<br> |   |   |   |   |
| 6월<br> |   |   |   |   |
| 7월<br> |   |   |   |   |
| 8월<br> |   |   |   |   |
| 9월<br> |   |   |   |   |
| 10월<br> |   |   |   |   |
| 11월<br> |   |   |   |   |
| 12월<br> |   |   |   |   |
| 1-2월<br> |   |   |   |   |
 

---


**[붙임 2]**

2026학년도 자율(전공)동아리 보고서


| 동아리명<br> |   | 지도교사<br> |   |
|---|---|---|---|
| 동아리장<br> |   | 동아리실<br> |   |
| 동아리<br> 활동시간<br> | 매주 화요일(8-10교시), 금요일(6-10교시)<br> |   |   |
| 목표<br> | 1.<br> 2.<br> |   |   |
| 동아리 활동내용(멘토링 활동내용 필수)<br> |   |   |   |
| 4월<br> |   |   |   |
| 5월<br> |   |   |   |
| 6월<br> |   |   |   |
| 7월<br> |   |   |   |



| 8월<br> |
|---|
| 9월<br> |
| 10월<br> |
| 11월<br> |
| 12월<br> |


지도교사:                    (서명)

---


**[붙임 3]**

**2026학년도**

**자율(전공) 동아리 프로젝트 보고서**


| 명단<br> | 1111홍길동, 2112김철수, ...(학번 오름차순으로 작성)<br> |
|---|---|
| 담당교사 확인 <br> |   |


**대덕소프트웨어마이스터고등학교**

---


**※ 보고서 작성 요령 **


| Ⅰ. 프로젝트 실행 동기 및 목적<br>   1.<br>     가. <br>       1) <br>         가)<br> Ⅱ. 이론적 배경(기존 사례 또는 문헌 연구 결과)<br> Ⅲ. 프로젝트 방법 및 과정<br> Ⅳ. 프로젝트 결과<br> Ⅴ. 결론 및 고찰<br> ▣ 참고문헌<br>   ※ 위 작성 요령에 준하여 작성, A4 10매 내외 작성<br> |
|---|


---


**[붙임 4]**

**2026학년도 전공(심화)동아리 지도 일지**


| 동아리명<br> |   |   |   |   |
|---|---|---|---|---|
| 동아리원<br> (총원:    명)<br> | 1111홍길동, 2112김철수, ...(학번 오름차순으로 작성)<br> |   |   |   |
| 일 정<br> | 지도 활동 및 내용<br> |   | 시간<br> | 서명<br> |
|    월    일 (   )<br> |   |   |   |   |
|   | 지도인원:    명<br> | 결시자: 1111홍길동, 2112김철수<br> |   |   |
|    월    일 (   )<br> |   |   |   |   |
|   | 지도인원:    명<br> | 결시자: <br> |   |   |
|    월    일 (   )<br> |   |   |   |   |
|   | 지도인원:    명<br> | 결시자: <br> |   |   |
|    월    일 (   )<br> |   |   |   |   |
|   | 지도인원:    명<br> | 결시자: <br> |   |   |
|    월    일 (   )<br> |   |   |   |   |
|   | 지도인원:    명<br> | 결시자: <br> |   |   |


**지도 교사  :               (인)**

---


**[붙임 5]**

**SW전문가 멘토 지원서**


| 접수<br> 번호<br> |  2026-<br> |   |   |   |   |   |   |   |
|---|---|---|---|---|---|---|---|---|
| 신<br> 청<br> 자<br> | 성 명<br> | 한 글<br> |   |   |   |   | 성     별<br> | 남   ,   여<br> |
|   |   | 한 자<br> |   |   |   |   | 생년월일<br> |   |
|   | 현<br> 주 소<br> |  □□□□□<br>  연락처 :  (집)                      (핸드폰)<br> |   |   |   |   |   |   |
|   | 최종<br> 학력<br> |   | 출신학교  <br> |   |   |   |   |   |
|   |   |   | 졸업년도<br> |   |   |   |   |   |


본인은 멘토링 운영 결격사유(성격, 인성, 전과기록, 업무능력, 병력 등)가 발생할 시에 해임 조치하여도 이의가 없으며 2026학년도 SW전문가 멘토링에 소정의 서류를 갖추어 지원합니다.

2026년       월       일

신 청 자                   (서명)

대덕소프트웨어마이스터고등학교장 귀하

󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏󰠏

【서류제출】본 서류는 서명 후 스캔 제출

【첨부서류】

1. 이력서 1부(별도 양식 없음)

2. 멘토링 활동 계획서 1부[붙임4]

3. 재직증명서

4. 개인정보 수집・이용・제공 동의서 1부[붙임5]

5. 통장사본 스캔본(인터넷 뱅킹에서 통장사본 출력, 계좌 개설확인서 등)

예) 농협의 경우 [증명서]-[통장사본출력])

6. 성범죄 경력 조회 및 아동학대 관련 범죄전력조회 동의서 1부(스캔본)[붙임7]

7. 거래처 등록을 위한 개인정보 수집・이용・제공 동의서 1부(스캔본)[붙임8]

---


**[붙임 6]**

개인정보 수집 및 활용 동의서


| 개인정보의 수집 및 이용목적<br> | <br> | [개인정보 및 고유 식별정보 수집 항목]<br> |<br> |---|<br> | 1. 개인정보 : 성명, 주소, 연락처, 이메일, 사진, 학력 및 경력사항, 자격 및     수상내역, 담당프로그램, 교육활동 관련 영상정보(사진, 동영상) <br> 2. 고유 식별정보 : 주민등록번호<br> |<br> | [개인정보 및 고유 식별정보 이용 목적]<br> |<br> | 1. 자율(전공)동아리 활동 및 관리에 활용<br> 2. 자율(전공)동아리 운영 및 생활 모습 안내<br> 3. 자율(전공)동아리에 활용 <br> |<br> |   |
|---|---|---|
| 개인정보<br>  제 3자 제공동의<br> | <br> |   | 개인정보를 제공받는 자<br> | 제공받는 개인정보의 이용범위<br> |<br> |---|---|---|<br> | 1<br> | 멘토링 대상자 및 교원<br> | 담당프로그램, 성명, 연락처<br> |<br> |   |
| 개인정보의 보유 및 이용기간<br> | ■ 개인정보·고유 식별정보의 보유 및 이용 기간<br> - 1년<br> |   |
| 개인정보 제공 동의 거부 권리 및 <br> 그에 따른 제약 사항<br> | ■ 개인정보 및 고유 식별정보의 제공 동의를 거부할 권리가 있으며, 동의하지 않는다면 정보를 제공하지 않습니다. <br> ■ 개인정보 및 고유 식별정보 미제공 시 자율(전공)동아리 안내 및 관련 내용을 원활하게 받지 못할 수 있습니다.<br> |   |
| <br> | 1. 개인정보 수집․이용 동의<br> | □ 예          □ 아니요<br> |<br> |---|---|<br> <br> | 2. 개인정보 제 3자 제공 및 활용 동의<br> | □ 예          □ 아니요<br> |<br> |---|---|<br> 이하 본인은 개인정보보호법 및 관련 법규에 의거하여 대덕소프트웨어마이스터고등학교 자율(전공)동아리에서 상기 개인정보를 수집·이용 및 제공·활용하는 것에 대해 동의합니다.<br>        2026년        월       일 　<br> |   |   |
|   |   | 전공 동아리 멘토                    (서명)<br> |


---


**[붙임 7]**

**멘토링 활동 계획서(  월)**


| 동아리명<br> |   | 대표학생<br> |   |   |
|---|---|---|---|---|
| 동아리원<br> |   |   |   |   |
| 활동목표<br> |   |   |   |   |
| 일 정<br> | 멘토 활동 및 내용<br> |   | 시간<br> | 멘토<br> |
| 2026년<br>    월    일 (   )<br> |   |   |   |   |
|    월    일 (   )<br> |   |   |   |   |
|   |   |   |   |   |
|   |   |   |   |   |
|   |   |   |   |   |
|   |   |   |   |   |
|   |   |   |   |   |


❍ 전공동아리 대표학생과 사전에 교육일정을 협의 후 월 단위로 작성합니다.

**확인자  :  교사              (인)**

---


**[붙임 8]**

**2026학년도 자율(전공)동아리 멘토 활동 일지(  월) **


| 동아리명<br> |   | 멘토<br> |   | 활동시간<br> |   |   |   |
|---|---|---|---|---|---|---|---|
| 멘토링 일시<br> | 2026년   월    일 (  )<br> |   |   |   |   |   |   |
| 활동 내용<br> | [ 교시   :   ~   :  ] <br> |   |   |   | 팀장 확인<br> |   |   |
|   |   |   |   |   |   |   |   |
|   | [ 교시   :   ~   :  ] <br> |   |   |   | 팀장 확인<br> |   |   |
|   |   |   |   |   |   |   |   |
|   | [ 교시   :   ~   :  ] <br> |   |   |   | 팀장 확인<br> |   |   |
|   |   |   |   |   |   |   |   |
|   | [ 교시   :   ~   :  ] <br> |   |   |   | 팀장 확인<br> |   |   |
|   |   |   |   |   |   |   |   |
|   | [ 교시   :   ~   :  ] <br> |   |   |   | 팀장 확인<br> |   |   |
|   |   |   |   |   |   |   |   |
|   | [ 교시   :   ~   :  ] <br> |   |   |   | 팀장 확인<br> |   |   |
|   |   |   |   |   |   |   |   |
|   | [ 교시   :   ~   :  ] <br> |   |   |   | 팀장 확인<br> |   |   |
|   |   |   |   |   |   |   |   |
|   | [ 교시   :   ~   :  ] <br> |   |   |   | 팀장 확인<br> |   |   |
|   |   |   |   |   |   |   |   |
| 기타 사항<br> |   |   |   |   |   |   |   |
| ※ 교육이 종료된 후 1일 단위로 작성합니다.(하루 8시간을 멘토링 한 경우 1장으로 작성)<br> 확인자  :  교사         (인)<br> |   |   |   |   |   |   |   |
|   |   |   |   |   |   |   |   |
|   |   |   | 마이스터부<br> |   |   |   |   |
|   |   |   | 담당(계)<br> |   |   | 부장<br> |   |
|   |   |   |   |   |   |   |   |
 

---


**[붙임 9]**


| [별지 제12호서식]<br> 성범죄 경력 조회 및 아동학대 관련 범죄전력조회 동의서<br> |   |   |   |   |   |
|---|---|---|---|---|---|
|   |   |   |   |   |   |
| 대상자<br> | 성  명<br> |   |   |   |   |
|   | 주민등록번호<br> (외국인의 경우 생년월일)<br> |   | 외국인등록번호(외국인인의 경우만 기입)<br> |   |   |
|   | 연락처<br> (휴대폰 등)<br> |   |   |   |   |
|   |   |   |   |   |   |
| 본인은 대덕소프트웨어마이스터고등학교 (시설)(예: 유치원, 어린이집, 아동복지시설, 청소년쉼터, 청소년활동시설, 의료기관 등) 취업자(취업예정자)로서, 「아동ㆍ청소년의 성보호에 관한 법률」 제56조 및 같은 법 시행령 제25조에 따른 성범죄경력 조회,「아동복지법」 제29조의3에 따른 아동학대 범죄전력 조회 신청에 동의합니다.<br> |   |   |   |   |   |
|   2026년         월         일<br> |   |   |   |   |   |
|    동의자<br> |   |   |   |       (서명 또는 인)<br> |   |
| 대전유성경찰서장 귀하<br> |   |   |   |   |   |
|   |   |   |   |   |   |
| 유의사항<br> |   |   |   |   |   |
|  1. 개인정보 수집항목 : 표 항목(성명, 주민등록번호, 외국인의 경우 외국인등록번호)<br>  2. 대상자가 외국인의 경우 성명(영문), 외국인등록번호를 적습니다.<br>  3. 개인정보 제공 거부에 따른 제한사항 : 귀하는 개인정보 제공 동의를 거부를 권리가 있으나, 동의 거부 시에는 취업에 제한을 받을 수 있습니다.<br>  4. 개인정보의 보유 : 수집된 고객의 개인정보는 성범죄 경력조회 신청 등을 위하여 사용됩니다.<br> |   |   |   |   |   |
| 210㎜×297㎜[백상지 80g/㎡(재활용품)]<br> |   |   |   |   |   |


---


**[붙임 10]**


| 거래처 등록을 위한 개인정보 수집・이용・제공 동의서<br> |
|---|
|   지급 관련 거래처 신규 등록을 위해 아래와 같이 개인정보를 수집・이용 및 제공 하고자 합니다. 내용을 자세히 읽으신 후 동의 여부를 결정하여 주시기 바랍니다.<br> □ 개인정보 수집·이용 동의<br>   1. 수집·이용목적 : 수당, 급여 등 각종 지급을 위한 거래처 관리<br>   2. 수집 항목 : 필수(이름, 생년월일/주민번호, 예금주명, 계좌번호), 선택(주소, 핸드폰, 전화번호)<br>   3. 이용 및 보유기간 : 계약 종료일로부터 익년 5년간(단 거래 미발생 시 설정한 기간)<br>   4. 동의를 거부할 수 있으며, 거부 시 거래처 등록 및 수당, 급여 등 각종 지급이 불가합니다.<br> 개인정보 수집·이용 동의           □ 예           □ 아니오 <br> □ 개인정보 제3자 제공 동의<br>   1. 제공받는 기관 : 대전광역시교육청 및 산하기관(학교포함)<br>   2. 제공받는 자의 이용 목적 : 수당, 급여 등 각종 지급을 위한 교육청 및 산하기관(학교포함) 거래처 공유<br>   3. 이용 및 보유 기간 : 계약 종료일로부터 익년 5년간(단 거래 미발생 시 설정한 기간)<br>   4. 제공 항목 : 필수(이름, 생년월일, 예금주명, 계좌번호), 선택(주소, 핸드폰, 전화번호)<br>   5. 동의를 거부할수 있으며, 거부시 대전광역시교육청 및 산하기관(학교포함)에서 거래처 정보를 이용할 수 없습니다.(해당 기관에서 신규 등록하여 이용 가능함.)<br> 개인정보 제3자 제공 동의             □ 예           □ 아니오<br> □ 개인정보 제3자 제공 고지<br>   1. 제공받는 기관 : 국세청<br>   2. 제공받는 자의 이용 목적 : 소득세 징수<br>   3. 제공 항목 : 이름, 주민등록번호<br>   4. 제공 근거 : 「소득세법」 제127조<br> □ 주민등록번호 수집·제공 고지<br>   「개인정보보호법」 제 24조의2제1항제1호에 따라 정보주체의 동의 없이 주민등록번호를 수집·제공할 수 있습니다.<br> <br> |  ※ 수집된 개인정보는 동의한 목적 외로는 활용하지 않으며 개인정보처리자에게 정정 또는      삭제 등을 요구할 수 있습니다.<br> |<br> |---|<br> □ 제공되는 개인정보<br> 이름: <br> 주민등록번호:<br> 계좌번호:        은행             <br> 연락처:<br> 2026 년     월     일<br> 성  명                    (서명)<br> 대덕소프트웨어마이스터고등학교 귀하<br> |
