crates/hwp-core/tests/snapshots/snapshot_tests__table_bug_page_0004.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: page_html
---
<!DOCTYPE html>
<html><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><head><title>연구회 유형 및 지원 예산</title><meta http-equiv="content-type" content="text/html; charset=utf-8"><link rel="stylesheet" type="text/css" href="table-bug_style.css"></head><body><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:20mm;top:25mm;"><div class="hcI"><div class="hls ps7" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs74">[붙임 3]</span></div><div class="hls ps106" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:5.46mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps106" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:12.24mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps107" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:19.01mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps84" style="line-height:8.47mm;white-space:nowrap;left:0.00mm;top:25.96mm;height:8.47mm;width:170.00mm;"><span class="hrt cs131">2026학년도</span></div><div class="hls ps84" style="line-height:8.47mm;white-space:nowrap;left:0.00mm;top:39.51mm;height:8.47mm;width:170.00mm;"><span class="hrt cs131">자율(전공) 동아리 프로젝트 보고서</span></div><div class="hls ps7" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:52.88mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:61.91mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps7" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:75.46mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps7" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:81.10mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:86.74mm;height:3.53mm;width:170.00mm;"><div class="hwp-hsR" style="top:0mm;margin-bottom:0mm;left:0mm;margin-right:0mm;width:154.5mm;height:27.55mm;display:inline-block;position:relative;vertical-align:middle;"><div class="hwp-hsT" style="left:-0.25mm;top:-0.25mm;width:154.5mm;height:27.55mm;"><svg class="hs" viewBox="-0.3 -0.3 155.1 28.15" style="left:-0.15mm;top:-0.15mm;width:154.8mm;height:27.85mm;"><path fill="none" d="M0.25,0.25L154.25,0.25L154.25,27.3L0.25,27.3L0.25,0.25Z " style="stroke:#353535;stroke-linecap:butt;stroke-width:0.5;"></path></svg><div class="hwp-hcD" style="left:1.05mm;top:1.05mm;"><div class="hwp-hcI" style="top:9.19mm;"><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:153.99mm;"><span class="hrt cs135">주제</span></div></div></div></div></div></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:115.91mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:121.55mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:127.20mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:132.84mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:138.49mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:144.13mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:149.78mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps22" style="line-height:34.79mm;white-space:nowrap;left:0.00mm;top:155.60mm;height:34.79mm;width:170.00mm;"><div class="htb" style="left:0.49mm;width:156.99mm;top:0.49mm;height:34.79mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 161.99 39.79" style="left:-2.5mm;top:-2.5mm;width:161.99mm;height:39.79mm;"><defs></defs><path d="M0,0 L0,33.8" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M48.05,0 L48.05,33.8" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M156.01,0 L156.01,33.8" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,0 L156.21,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,15.33 L156.21,15.33" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,33.8 L156.21,33.8" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:48.05mm;height:15.33mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.99mm;"><div class="hls ps108" style="line-height:6.35mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:6.35mm;width:47.05mm;"><span class="hrt cs137">명단</span></div></div></div></div><div class="hce" style="left:48.05mm;top:0mm;width:107.95mm;height:15.33mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:5.05mm;"><div class="hls ps86" style="line-height:4.23mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.23mm;width:106.95mm;"><span class="hrt cs125">1111홍길동, 2112김철수, ...(학번 오름차순으로 작성)</span></div></div></div></div><div class="hce" style="left:0mm;top:15.33mm;width:48.05mm;height:18.47mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:5.56mm;"><div class="hls ps108" style="line-height:6.35mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:6.35mm;width:47.05mm;"><span class="hrt cs137">담당교사 확인&nbsp;</span></div></div></div></div><div class="hce" style="left:48.05mm;top:15.33mm;width:107.95mm;height:18.47mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:5.91mm;"><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:106.95mm;"></div></div></div></div></div></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:194.02mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:203.05mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:212.08mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:221.11mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps84" style="line-height:8.47mm;white-space:nowrap;left:0.00mm;top:226.93mm;height:8.47mm;width:170.00mm;"><span class="hrt cs131">대덕소프트웨어마이스터고등학교</span></div><div class="hls ps7" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:240.30mm;height:3.53mm;width:170.00mm;"></div></div></div><div class="hpN" style="left:105mm;top:287mm;width:9.53mm;height:3.81mm;"><span class="hrt cs0">- 4 -</span></div></div></body></html>
